Fix: More specific punctuation regex.

--- a/test/sample_articles.org
+++ b/test/sample_articles.org
@@ -3,12 +3,184 @@
 
 *  [[https://ici.radio-canada.ca/nouvelle/1815882/quebec-plan-rentree-scolaire-roberge][Québec : une rentrée avec masque dans les aires communes, mais pas en classe]]
 
-Le ministre de l'Éducation du Québec, Jean-François Roberge, a fait savoir mercredi lors de la présentation du plan du gouvernement en vue de la rentrée scolaire 2021-2022 qu'en raison des risques que fait peser le variant Delta, le masque devra être porté par les élèves du primaire et du secondaire en certaines circonstances.
+Le ministre de l'Éducation du Québec, Jean-François Roberge, a fait savoir
+mercredi lors de la présentation du plan du gouvernement en vue de la rentrée
+scolaire 2021-2022 qu'en raison des risques que fait peser le variant Delta, le
+masque devra être porté par les élèves du primaire et du secondaire en certaines
+circonstances.
 
-En fait, les élèves pourront évoluer sans masque pour la plus grande partie de leur présence à l'école, soit en classe, à l'extérieur et au service de garde. Celui-ci sera cependant requis dans les autobus scolaires, où des places seront assignées aux élèves, et dans les aires communes.
+En fait, les élèves pourront évoluer sans masque pour la plus grande partie de
+leur présence à l'école, soit en classe, à l'extérieur et au service de garde.
+Celui-ci sera cependant requis dans les autobus scolaires, où des places seront
+assignées aux élèves, et dans les aires communes.
 
-Les autobus et les aires communes sont des endroits où les jeunes se retrouvent souvent entassés et au coude-à-coude, a fait valoir le ministre Roberge, ce qui requiert plus de précautions, dit-il.
+Les autobus et les aires communes sont des endroits où les jeunes se retrouvent
+souvent entassés et au coude-à-coude, a fait valoir le ministre Roberge, ce qui
+requiert plus de précautions, dit-il.
 
-Quant aux enseignants, ils ne seront pas obligés de porter le masque en classe si une distance de deux mètres avec les élèves est respectée. Il n'est pas non plus question pour le moment d'obliger les enseignants à se faire vacciner.
+Quant aux enseignants, ils ne seront pas obligés de porter le masque en classe
+si une distance de deux mètres avec les élèves est respectée. Il n'est pas non
+plus question pour le moment d'obliger les enseignants à se faire vacciner.
 
-Malgré la crainte d’une résurgence d’éclosions de COVID-19, le ministre Roberge a aussi fait savoir que les classes-bulles ne seront pas de mise cette année, ce qui permettra le retour des cours à option au secondaire, ainsi que les programmes de sport-études, d’arts-études et les activités parascolaires.
+Malgré la crainte d’une résurgence d’éclosions de COVID-19, le ministre Roberge
+a aussi fait savoir que les classes-bulles ne seront pas de mise cette année, ce
+qui permettra le retour des cours à option au secondaire, ainsi que les
+programmes de sport-études, d’arts-études et les activités parascolaires.
+
+* [[https://ici.radio-canada.ca/nouvelle/1817972/denis-villeneuve-dunes-mostra-venise][Denis Villeneuve aux portes de Dune]]
+
+Humble et réservé, Denis Villeneuve a frayé son chemin dans le brouhaha
+d'Hollywood depuis le triomphe à l'international avec son film Incendies (2010),
+enchaînant les succès Prisoners (2013), Enemy (2013), Sicario (2015), Arrival
+(2016) et Blade Runner 2049 (2017). À deux semaines de la première mondiale à la
+Mostra de Venise de la première partie de son adaptation du roman Dune, un des
+films les plus attendus de l'année, nous avons discuté pendant trente minutes.
+
+Il s'agit sans aucun doute d'un grand moment pour le cinéaste qui depuis un
+jeune âge voue un culte pour ce chef d'orchestre de la science-fiction qu'est
+Frank Herbert.
+
+"C'est un livre que j'ai dû lire au début de l'adolescence vers 13 ou 14 ans. Ce
+qu'on suit, c'est l'histoire d'un jeune homme qui se cherche, qui définit son
+identité, qui a de la difficulté à négocier avec son héritage génétique,
+familial et politique", explique-t-il. "Cette exploration des névroses, cette
+exploration du joug du passé, des voix intérieures, de comment on est influencé
+par notre éducation, génétiquement aussi, on transporte des douleurs, des
+colères, des générations précédentes. C'est quelque chose qui était présent dans
+Incendies aussi, ce sont des thèmes qui m'inspirent beaucoup."
+
+Après avoir été inspirée, l'adaptation de Dune a été un marathon longuement
+réfléchi. Il y a trente ans, le cinéaste de Bécancour a participé à l'émission
+La course Europe-Asie qu'il a remportée et pendant laquelle il a visité la
+Jordanie. C'est dans ce pays qu'il a tourné Incendies puis Dune.
+
+"J'ai découvert la Jordanie durant la course, je suis allé tourner là-bas.
+J'étais attiré par le désert et à l'époque je voulais faire un film sur les
+Nabatéens, sur l'architecture de Pétra. Quand j'ai découvert cet espace-là et
+quand je suis retourné pour tourner Incendies, je me souviens d'avoir exploré
+des zones et de me dire que si jamais je faisais un film sur Dune, c'est ici que
+je le ferais", raconte-t-il.
+
+"Ce sont des paysages qui me rappelaient les descriptions de Frank Herbert. Il y
+a une force dans le paysage jordanien. Comme disait un de mes collaborateurs,
+c'est un paysage tellement gigantesque que même si tu es athée tu te mets à
+croire en Dieu." Dune, prise deux
+
+Denis Villeneuve connaît le roman "Dune" presque par coeur. Depuis ses débuts,
+sa vision semble être guidée par la grande phrase clé du roman de Frank
+Herbert : "Je ne connaîtrais pas la peur, car la peur tue l'esprit".
+
+Le Dune de David Lynch sorti 1984 avait laissé Denis Villeneuve sur son appétit,
+même s'il est un grand admirateur du réalisateur américain.
+
+"On pourrait y voir un geste d'une immense arrogance de venir faire une autre
+adaptation de ce roman-là après celle de David Lynch. (...) J'ai senti que
+depuis le début, en voyant le film de Lynch, que c'est pas le film que j'avais
+rêvé. Je sentais qu'il y avait de la place pour une autre interprétation. Donc
+c'est juste un geste d'amour envers Frank Herbert", explique-t-il.
+
+Et pour ce geste d'amour, le réalisateur a beaucoup appris de son film Blade
+Runner 2049, un succès critique, mais pas le succès commercial escompté.
+
+"Le film Blade Runner 2049 avait la réputation d'être long et intellectuel.
+Comme réalisateur, on ne m'a pas donné tout l'argent du monde pour faire Dune,
+j'ai dû le faire dans un cadre précis parce que j'étais le gars qui venait de
+faire Blade Runner 2049."
+
+    On est aussi bon que le dernier film qu'on a fait dans ce milieu-là. Ça fait
+    partir du jeu.
+
+Le Dune de Denis Villeneuve est une adaptation de près de 200 millions de
+dollars mettant en vedette une impressionnante distribution incluant entre
+autres Timothée Chalamet, Rebecca Ferguson et Oscar Isaac.
+
+Chargement de l’image
+
+Timothée Chalamet et Rebecca Ferguson dans une scène tournée dans le désert de
+Jordanie.
+
+Photo : Chiabella James Warner
+
+La sortie du film a été repoussée à cause de la pandémie et sa mise en marché a
+été maintes fois revue et corrigée. Warner Bros. a décidé en décembre 2020 de
+distribuer Dune aux États-Unis simultanément dans les salles de cinéma et sur
+son site de visionnement en ligne HBO MAX, ce qui a provoqué la colère de Denis
+Villeneuve qui a écrit une lettre ouverte vitriolique dans le magazine Variety.
+
+"Je maintiens ma position. L'idée que dans la crise il y a une décision
+unilatérale de sortir toute une série de films simultanément sur grand écran et
+dans un service de streaming, le premier problème est ne pas avoir consulté
+personne. C'est un coup de poignard dans le dos pour moi. Le cinéma est un
+travail d'équipe. Je n'y crois pas du tout à ce modèle-là."
+
+"Ça m'a mis en colère et j'ai dit ce qui me semblait juste", ajoute-t-il. "Ce
+qui est dit est vrai. Il n'y avait pas de mauvaise foi. Je dédie ma vie au
+cinéma et le grand écran fait partie du langage".
+
+    Il n'y a rien de plus touchant que d'être dans une salle de cinéma et de
+    vivre une vague d'émotions, on ne peut pas vivre ça à la maison. Les gens
+    qui vont voir Dune à la maison n'auront pas du tout la même expérience.
+
+Tout pour l'amour du cinéma
+
+Diplômé en cinéma de l'UQAM, Denis Villeneuve a un parcours impressionnant et il
+est parmi es réalisateurs les plus en vue. Il y a trente ans, il remportait La
+Course Europe-Asie, mais pour lui ça fait mille ans.
+
+"Un film c'est comme un autoportrait, comme on se voit à l'adolescence, on voit
+juste les défauts. Donc je revois mes films tranquillement dans le temps",
+explique-t-il. "Pour des raisons techniques j'ai dû revoir Maelström après 20
+ans. C'est la première fois que je pouvais vraiment recevoir le film sans avoir
+toute la charge émotive qui vient avec la fabrication du film. Chaque film
+comporte son lot de déception, de colère, de déception face à soi-même. Ça prend
+du temps avant de pouvoir faire la paix avec ses films."
+
+Incendies a célébré l'an dernier son dixième anniversaire. Un film qui l'habite
+encore, car Denis Villeneuve ne cesse de réfléchir en images.
+
+Pour expliquer son ascension au firmament d'Hollywood, il nous confie ceci :
+"moi, je fais juste du cinéma! J'en mange, c'est ce que je fais, c'est ma vie"!
+
+    Le cinéma c'est ce qui m'a permis d'être en relation avec le monde. C'est
+    une obsession.
+
+"Mes enfants se moquent de moi parce que tous mes temps libres sont consacrés à
+ça. Donc il y a peut-être un côté compulsif, obsessif qui fait que ça m'a poussé
+là", admet-il. "Le reste il y a eu beaucoup de chance aussi. Dans tout mon
+parcours, il y a eu beaucoup de moments clés. J'ai eu un flair aussi pour
+m'associer aux bonnes personnes." Dune en première mondiale
+
+Dune sera présenté en première mondiale le 3 septembre à la Mostra de Venise, un
+festival qui a une portée symbolique pour Denis Villeneuve. Il s'y était déjà
+rendu en 2011 pour la sortie de son film Incendies et en 2016 pour son film
+Arrival.
+
+"Je vais être soulagé quand je vais être assis dans la salle. Les choses
+progressent tellement rapidement et il y a tellement de changements au
+quotidien. Je vais y croire quand je vais être assis là-bas. Je dirais que c'est
+un exercice de lâcher-prise la sortie de ce film. (...) Ça va sortir dans un
+contexte imparfait et j'accepte le fait que c'est la sécurité des gens avant
+tout".
+
+Denis Villeneuve affirme qu'il n'y a pas de version de quatre ou six heures de
+son film, que celle qui sera aussi présentée au Festival international du film
+de Toronto en septembre et dans les salles de cinéma le 22 octobre sera la
+bonne. On lui souhaite, car Warner Bros. attendra les résultats du box-office
+avant de financer le tournage de la deuxième partie.
+
+Denis Villeneuve garde la tête froide, concentré sur la sortie de Dune (première
+partie). Pour la suite, on verra. "J'essaie de ne pas trop m'éparpiller. Je suis
+quelqu'un d'assez monomanique. J'essaie de travailler sur un projet à la fois.
+La deuxième partie de Dune sera une priorité. Je commence à travailler sur un
+film sur la vie de Cléopâtre, qui est un projet qui m'habite depuis longtemps.
+C'est un projet que je n'aurais pas osé faire il y a dix ans, mais que
+maintenant j'ai les connaissances techniques pour pouvoir faire le film dont je
+rêve."
+
+"Il y a le deuxième livre de Dune, Le Messie de Dune, qui pourrait faire un film
+extraordinaire", croit-il. "J'ai toujours vu qu'il pourrait y avoir une
+trilogie, après ça on verra. C'est des années de travail, je ne vois pas aller
+plus loin que ça."
+
+Des extraits de cette entrevue seront diffusés le vendredi 20 août au
+Téléjournal avec Patrice Roy et au Téléjournal 22 h de Radio-Canada.
